--- a/Front - Proyecto/src/Administrativo/output.css
+++ b/Front - Proyecto/src/Administrativo/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -568,8 +568,16 @@ video {
   position: relative;
 }
 
+.-right-10 {
+  right: -2.5rem;
+}
+
 .-top-28 {
   top: -7rem;
+}
+
+.-top-8 {
+  top: -2rem;
 }
 
 .bottom-0 {
@@ -608,10 +616,6 @@ video {
   top: 3rem;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
 .top-28 {
   top: 7rem;
 }
@@ -640,10 +644,6 @@ video {
   top: 14px;
 }
 
-.top-\[3\.6rem\] {
-  top: 3.6rem;
-}
-
 .top-\[3rem\] {
   top: 3rem;
 }
@@ -654,78 +654,6 @@ video {
 
 .top-\[4rem\] {
   top: 4rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-\[5rem\] {
-  top: 5rem;
-}
-
-.top-\[6rem\] {
-  top: 6rem;
-}
-
-.top-\[rem\] {
-  top: rem;
-}
-
-.top-\[4\.5rem\] {
-  top: 4.5rem;
-}
-
-.top-\[3\.5rem\] {
-  top: 3.5rem;
-}
-
-.top-\[3\.1rem\] {
-  top: 3.1rem;
-}
-
-.top-\[3\.2rem\] {
-  top: 3.2rem;
-}
-
-.top-\[3\.4rem\] {
-  top: 3.4rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-44 {
-  top: 11rem;
-}
-
-.top-40 {
-  top: 10rem;
-}
-
-.top-52 {
-  top: 13rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-64 {
-  top: 16rem;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-96 {
-  top: 24rem;
 }
 
 .z-10 {
@@ -789,10 +717,6 @@ video {
   margin-right: auto;
 }
 
-.-ml-28 {
-  margin-left: -7rem;
-}
-
 .-ml-32 {
   margin-left: -8rem;
 }
@@ -827,6 +751,10 @@ video {
 
 .-mt-5 {
   margin-top: -1.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -925,6 +853,10 @@ video {
   margin-left: 10rem;
 }
 
+.ml-\[13rem\] {
+  margin-left: 13rem;
+}
+
 .ml-\[2px\] {
   margin-left: 2px;
 }
@@ -969,10 +901,6 @@ video {
   margin-right: 2rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -985,6 +913,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -995,6 +927,10 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-4 {
@@ -1047,6 +983,10 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
+}
+
+.mt-\[9rem\] {
+  margin-top: 9rem;
 }
 
 .box-border {
@@ -1169,10 +1109,6 @@ video {
   height: 300px;
 }
 
-.h-\[42px\] {
-  height: 42px;
-}
-
 .h-\[60px\] {
   height: 60px;
 }
@@ -1181,8 +1117,8 @@ video {
   height: 68px;
 }
 
-.h-auto {
-  height: auto;
+.h-\[9rem\] {
+  height: 9rem;
 }
 
 .h-full {
@@ -1195,14 +1131,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[30px\] {
-  height: 30px;
 }
 
 .max-h-\[220px\] {
@@ -1251,10 +1179,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .w-36 {
@@ -1345,10 +1269,6 @@ video {
   width: 350px;
 }
 
-.w-\[42px\] {
-  width: 42px;
-}
-
 .w-\[4rem\] {
   width: 4rem;
 }
@@ -1385,28 +1305,12 @@ video {
   width: 100vw;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
 .min-w-full {
   min-width: 100%;
 }
 
 .max-w-40 {
   max-width: 10rem;
-}
-
-.max-w-52 {
-  max-width: 13rem;
 }
 
 .max-w-64 {
@@ -1419,6 +1323,10 @@ video {
 
 .max-w-\[40rem\] {
   max-width: 40rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .max-w-none {
@@ -1445,8 +1353,16 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1491,14 +1407,6 @@ video {
   white-space: break-spaces;
 }
 
-.text-balance {
-  text-wrap: balance;
-}
-
-.break-words {
-  overflow-wrap: break-word;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1525,10 +1433,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .rounded-xl {
@@ -1586,6 +1490,11 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .border-slate-300 {
@@ -1653,6 +1562,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -1661,6 +1575,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-15 {
+  --tw-bg-opacity: 0.15;
 }
 
 .bg-opacity-50 {
@@ -1696,8 +1614,17 @@ video {
   padding: 1rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-\[0\.5\] {
   padding: 0.5;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1740,6 +1667,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1758,6 +1690,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1802,6 +1738,11 @@ video {
   font-size: 2rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1810,6 +1751,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs {
@@ -1823,6 +1769,14 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
 }
 
 .text-\[\#241111\] {
@@ -1840,19 +1794,14 @@ video {
   color: rgb(48 47 47 / var(--tw-text-opacity));
 }
 
-.text-\[\#545151\] {
-  --tw-text-opacity: 1;
-  color: rgb(84 81 81 / var(--tw-text-opacity));
-}
-
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-\[\#e28686\] {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(226 134 134 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -1884,6 +1833,34 @@ video {
   text-decoration-line: underline;
 }
 
+.placeholder-white::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-white::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-opacity-\[0\.75\]::-moz-placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.placeholder-opacity-\[0\.75\]::placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1894,8 +1871,7 @@ video {
   outline-style: solid;
 }
 
-.blur {
-  --tw-blur: blur(8px);
+.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1909,11 +1885,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:bg-\[\#205748\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(32 87 72 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#2e5c5c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 92 92 / var(--tw-bg-opacity));
@@ -1922,6 +1893,11 @@ video {
 .hover\:bg-\[\#47917c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#5e9f9f\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 159 159 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#7EBBAA\]:hover {
@@ -1948,14 +1924,23 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#defdfb\]:hover {
+.hover\:text-\[\#99E0FF\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(222 253 251 / var(--tw-text-opacity));
+  color: rgb(153 224 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#c6d7d2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(198 215 210 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1977,13 +1962,22 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.active\:bg-\[\#50a48c\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 164 140 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:ml-16 {
+    margin-left: 4rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:min-h-\[50rem\] {
-    min-height: 50rem;
+  .sm\:min-h-\[38rem\] {
+    min-height: 38rem;
   }
 
   .sm\:w-9\/12 {
@@ -2032,8 +2026,8 @@ video {
     margin-left: 2rem;
   }
 
-  .md\:ml-\[20rem\] {
-    margin-left: 20rem;
+  .md\:ml-\[16rem\] {
+    margin-left: 16rem;
   }
 
   .md\:ml-\[21rem\] {
@@ -2092,8 +2086,16 @@ video {
     max-height: 350px;
   }
 
+  .md\:max-h-\[36rem\] {
+    max-height: 36rem;
+  }
+
   .md\:max-h-\[40rem\] {
     max-height: 40rem;
+  }
+
+  .md\:min-h-\[35rem\] {
+    min-height: 35rem;
   }
 
   .md\:min-h-\[36rem\] {
@@ -2171,6 +2173,11 @@ video {
     padding-left: 0.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2182,6 +2189,21 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
@@ -2258,6 +2280,14 @@ video {
     margin-left: 18rem;
   }
 
+  .lg\:ml-\[19rem\] {
+    margin-left: 19rem;
+  }
+
+  .lg\:ml-\[22rem\] {
+    margin-left: 22rem;
+  }
+
   .lg\:ml-\[24px\] {
     margin-left: 24px;
   }
@@ -2314,10 +2344,6 @@ video {
     height: 1.5rem;
   }
 
-  .lg\:h-\[64px\] {
-    height: 64px;
-  }
-
   .lg\:max-h-\[32rem\] {
     max-height: 32rem;
   }
@@ -2354,12 +2380,12 @@ video {
     width: 18rem;
   }
 
-  .lg\:w-\[30rem\] {
-    width: 30rem;
+  .lg\:w-\[22rem\] {
+    width: 22rem;
   }
 
-  .lg\:w-\[32rem\] {
-    width: 32rem;
+  .lg\:w-\[30rem\] {
+    width: 30rem;
   }
 
   .lg\:w-\[350px\] {
@@ -2368,10 +2394,6 @@ video {
 
   .lg\:w-\[41\%\] {
     width: 41%;
-  }
-
-  .lg\:w-\[64px\] {
-    width: 64px;
   }
 
   .lg\:w-\[78\%\] {
@@ -2456,6 +2478,21 @@ video {
   .lg\:text-\[16px\] {
     font-size: 16px;
   }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2465,10 +2502,6 @@ video {
 
   .xl\:ml-10 {
     margin-left: 2.5rem;
-  }
-
-  .xl\:ml-2 {
-    margin-left: 0.5rem;
   }
 
   .xl\:ml-3 {
@@ -2487,10 +2520,6 @@ video {
     margin-left: 24px;
   }
 
-  .xl\:ml-\[30rem\] {
-    margin-left: 30rem;
-  }
-
   .xl\:ml-\[31rem\] {
     margin-left: 31rem;
   }
@@ -2505,10 +2534,6 @@ video {
 
   .xl\:mr-10 {
     margin-right: 2.5rem;
-  }
-
-  .xl\:mr-2 {
-    margin-right: 0.5rem;
   }
 
   .xl\:mt-12 {
@@ -2655,6 +2680,11 @@ video {
 
   .xl\:text-\[16px\] {
     font-size: 16px;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .xl\:text-sm {
