--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/output.css
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -568,8 +568,16 @@ video {
   position: relative;
 }
 
+.-right-10 {
+  right: -2.5rem;
+}
+
 .-top-28 {
   top: -7rem;
+}
+
+.-top-8 {
+  top: -2rem;
 }
 
 .bottom-0 {
@@ -612,10 +620,6 @@ video {
   top: 7rem;
 }
 
-.top-32 {
-  top: 8rem;
-}
-
 .top-36 {
   top: 9rem;
 }
@@ -654,10 +658,6 @@ video {
 
 .z-20 {
   z-index: 20;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .z-\[10\] {
@@ -709,8 +709,9 @@ video {
   margin-right: auto;
 }
 
-.-ml-28 {
-  margin-left: -7rem;
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .-ml-32 {
@@ -747,6 +748,10 @@ video {
 
 .-mt-5 {
   margin-top: -1.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-2 {
@@ -845,6 +850,10 @@ video {
   margin-left: 10rem;
 }
 
+.ml-\[13rem\] {
+  margin-left: 13rem;
+}
+
 .ml-\[2px\] {
   margin-left: 2px;
 }
@@ -889,10 +898,6 @@ video {
   margin-right: 2rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -905,6 +910,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -915,6 +924,10 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-4 {
@@ -1089,10 +1102,6 @@ video {
   height: 300px;
 }
 
-.h-\[42px\] {
-  height: 42px;
-}
-
 .h-\[60px\] {
   height: 60px;
 }
@@ -1101,8 +1110,8 @@ video {
   height: 68px;
 }
 
-.h-auto {
-  height: auto;
+.h-\[9rem\] {
+  height: 9rem;
 }
 
 .h-full {
@@ -1163,10 +1172,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .w-36 {
@@ -1257,10 +1262,6 @@ video {
   width: 350px;
 }
 
-.w-\[42px\] {
-  width: 42px;
-}
-
 .w-\[4rem\] {
   width: 4rem;
 }
@@ -1305,10 +1306,6 @@ video {
   max-width: 10rem;
 }
 
-.max-w-52 {
-  max-width: 13rem;
-}
-
 .max-w-64 {
   max-width: 16rem;
 }
@@ -1319,6 +1316,10 @@ video {
 
 .max-w-\[40rem\] {
   max-width: 40rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .max-w-none {
@@ -1345,8 +1346,16 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1373,10 +1382,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-visible {
-  overflow: visible;
-}
-
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1389,14 +1394,6 @@ video {
 
 .whitespace-break-spaces {
   white-space: break-spaces;
-}
-
-.text-balance {
-  text-wrap: balance;
-}
-
-.break-words {
-  overflow-wrap: break-word;
 }
 
 .rounded {
@@ -1425,10 +1422,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .rounded-xl {
@@ -1486,6 +1479,11 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .border-slate-300 {
@@ -1553,6 +1551,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -1561,6 +1564,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-15 {
+  --tw-bg-opacity: 0.15;
 }
 
 .bg-opacity-50 {
@@ -1596,8 +1603,17 @@ video {
   padding: 1rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-\[0\.5\] {
   padding: 0.5;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1640,6 +1656,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1658,6 +1679,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1702,6 +1727,11 @@ video {
   font-size: 2rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1710,6 +1740,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs {
@@ -1723,6 +1758,14 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
 }
 
 .text-\[\#241111\] {
@@ -1740,19 +1783,14 @@ video {
   color: rgb(48 47 47 / var(--tw-text-opacity));
 }
 
-.text-\[\#545151\] {
-  --tw-text-opacity: 1;
-  color: rgb(84 81 81 / var(--tw-text-opacity));
-}
-
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-\[\#e28686\] {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(226 134 134 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -1784,6 +1822,34 @@ video {
   text-decoration-line: underline;
 }
 
+.placeholder-white::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-white::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-opacity-\[0\.75\]::-moz-placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.placeholder-opacity-\[0\.75\]::placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1794,8 +1860,7 @@ video {
   outline-style: solid;
 }
 
-.blur {
-  --tw-blur: blur(8px);
+.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1809,11 +1874,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:bg-\[\#205748\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(32 87 72 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#2e5c5c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 92 92 / var(--tw-bg-opacity));
@@ -1822,6 +1882,11 @@ video {
 .hover\:bg-\[\#47917c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#5e9f9f\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 159 159 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#7EBBAA\]:hover {
@@ -1848,19 +1913,23 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
 }
 
+.hover\:text-\[\#99E0FF\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(153 224 255 / var(--tw-text-opacity));
+}
+
 .hover\:text-\[\#c6d7d2\]:hover {
   --tw-text-opacity: 1;
   color: rgb(198 215 210 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#defdfb\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(222 253 251 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1882,13 +1951,22 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.active\:bg-\[\#50a48c\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 164 140 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:ml-16 {
+    margin-left: 4rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:min-h-\[50rem\] {
-    min-height: 50rem;
+  .sm\:min-h-\[38rem\] {
+    min-height: 38rem;
   }
 
   .sm\:w-9\/12 {
@@ -1937,8 +2015,8 @@ video {
     margin-left: 2rem;
   }
 
-  .md\:ml-\[20rem\] {
-    margin-left: 20rem;
+  .md\:ml-\[16rem\] {
+    margin-left: 16rem;
   }
 
   .md\:ml-\[21rem\] {
@@ -1955,10 +2033,6 @@ video {
 
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .md\:mt-2 {
@@ -1997,8 +2071,16 @@ video {
     max-height: 350px;
   }
 
+  .md\:max-h-\[36rem\] {
+    max-height: 36rem;
+  }
+
   .md\:max-h-\[40rem\] {
     max-height: 40rem;
+  }
+
+  .md\:min-h-\[35rem\] {
+    min-height: 35rem;
   }
 
   .md\:min-h-\[36rem\] {
@@ -2076,6 +2158,11 @@ video {
     padding-left: 0.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2087,6 +2174,21 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
@@ -2121,6 +2223,34 @@ video {
 
   .lg\:top-\[86px\] {
     top: 86px;
+  }
+
+  .lg\:right-32 {
+    right: 8rem;
+  }
+
+  .lg\:right-28 {
+    right: 7rem;
+  }
+
+  .lg\:right-24 {
+    right: 6rem;
+  }
+
+  .lg\:right-20 {
+    right: 5rem;
+  }
+
+  .lg\:left-28 {
+    left: 7rem;
+  }
+
+  .lg\:left-24 {
+    left: 6rem;
+  }
+
+  .lg\:left-20 {
+    left: 5rem;
   }
 
   .lg\:z-\[1\] {
@@ -2161,6 +2291,14 @@ video {
 
   .lg\:ml-\[18rem\] {
     margin-left: 18rem;
+  }
+
+  .lg\:ml-\[19rem\] {
+    margin-left: 19rem;
+  }
+
+  .lg\:ml-\[22rem\] {
+    margin-left: 22rem;
   }
 
   .lg\:ml-\[24px\] {
@@ -2219,10 +2357,6 @@ video {
     height: 1.5rem;
   }
 
-  .lg\:h-\[64px\] {
-    height: 64px;
-  }
-
   .lg\:max-h-\[32rem\] {
     max-height: 32rem;
   }
@@ -2259,12 +2393,12 @@ video {
     width: 18rem;
   }
 
-  .lg\:w-\[30rem\] {
-    width: 30rem;
+  .lg\:w-\[22rem\] {
+    width: 22rem;
   }
 
-  .lg\:w-\[32rem\] {
-    width: 32rem;
+  .lg\:w-\[30rem\] {
+    width: 30rem;
   }
 
   .lg\:w-\[350px\] {
@@ -2275,8 +2409,8 @@ video {
     width: 41%;
   }
 
-  .lg\:w-\[64px\] {
-    width: 64px;
+  .lg\:w-\[45\%\] {
+    width: 45%;
   }
 
   .lg\:w-\[78\%\] {
@@ -2285,6 +2419,14 @@ video {
 
   .lg\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .lg\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .lg\:w-\[52\%\] {
+    width: 52%;
   }
 
   .lg\:min-w-\[20rem\] {
@@ -2361,6 +2503,21 @@ video {
   .lg\:text-\[16px\] {
     font-size: 16px;
   }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2370,10 +2527,6 @@ video {
 
   .xl\:ml-10 {
     margin-left: 2.5rem;
-  }
-
-  .xl\:ml-2 {
-    margin-left: 0.5rem;
   }
 
   .xl\:ml-3 {
@@ -2392,10 +2545,6 @@ video {
     margin-left: 24px;
   }
 
-  .xl\:ml-\[30rem\] {
-    margin-left: 30rem;
-  }
-
   .xl\:ml-\[31rem\] {
     margin-left: 31rem;
   }
@@ -2410,10 +2559,6 @@ video {
 
   .xl\:mr-10 {
     margin-right: 2.5rem;
-  }
-
-  .xl\:mr-2 {
-    margin-right: 0.5rem;
   }
 
   .xl\:mt-12 {
@@ -2560,6 +2705,11 @@ video {
 
   .xl\:text-\[16px\] {
     font-size: 16px;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .xl\:text-sm {
