--- a/Front - Proyecto/src/Administrativo/output.css
+++ b/Front - Proyecto/src/Administrativo/output.css
@@ -937,10 +937,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -985,8 +981,12 @@ video {
   margin-top: 9.6rem;
 }
 
-.mt-\[9rem\] {
-  margin-top: 9rem;
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .box-border {
@@ -1043,6 +1043,10 @@ video {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-44 {
@@ -1131,6 +1135,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .max-h-\[220px\] {
@@ -2046,10 +2054,6 @@ video {
     margin-top: 0px;
   }
 
-  .md\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -2316,16 +2320,16 @@ video {
     margin-top: 0.75rem;
   }
 
-  .lg\:mt-40 {
-    margin-top: 10rem;
-  }
-
   .lg\:mt-5 {
     margin-top: 1.25rem;
   }
 
   .lg\:mt-\[4px\] {
     margin-top: 4px;
+  }
+
+  .lg\:mt-40 {
+    margin-top: 10rem;
   }
 
   .lg\:block {
